// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UrqlClient Client with exchanges provided should instantiate a client with exchanges 1`] = `
Client {
  "activeOperations": Object {},
  "createOperationContext": [Function],
  "createRequestOperation": [Function],
  "dispatchOperation": [Function],
  "exchange": [Function],
  "executeMutation": [Function],
  "executeQuery": [Function],
  "executeSubscription": [Function],
  "fetchOptions": Object {
    "integrity": "",
    "referrerPolicy": "",
  },
  "operations$": [Function],
  "reexecuteOperation": [Function],
  "results$": [Function],
  "suspense": false,
  "url": "https://localhost:3000",
}
`;

exports[`UrqlClient Client with fetchOptions provided should instantiate a client instance with fetchOptions provided as FetchFn 1`] = `
Client {
  "activeOperations": Object {},
  "createOperationContext": [Function],
  "createRequestOperation": [Function],
  "dispatchOperation": [Function],
  "exchange": [Function],
  "executeMutation": [Function],
  "executeQuery": [Function],
  "executeSubscription": [Function],
  "fetchOptions": [Function],
  "operations$": [Function],
  "reexecuteOperation": [Function],
  "results$": [Function],
  "suspense": false,
  "url": "https://localhost:3000",
}
`;

exports[`UrqlClient Client with fetchOptions provided should instantiate a client instance with fetchOptions provided as FetchOpts 1`] = `
Client {
  "activeOperations": Object {},
  "createOperationContext": [Function],
  "createRequestOperation": [Function],
  "dispatchOperation": [Function],
  "exchange": [Function],
  "executeMutation": [Function],
  "executeQuery": [Function],
  "executeSubscription": [Function],
  "fetchOptions": Object {
    "headers": Object {
      "Content-Type": "application/json",
    },
    "integrity": "",
    "method": "POST",
    "referrerPolicy": "",
  },
  "operations$": [Function],
  "reexecuteOperation": [Function],
  "results$": [Function],
  "suspense": false,
  "url": "https://localhost:3000",
}
`;

exports[`UrqlClient Client with only a url provided should instantiate a client instance 1`] = `
Client {
  "activeOperations": Object {},
  "createOperationContext": [Function],
  "createRequestOperation": [Function],
  "dispatchOperation": [Function],
  "exchange": [Function],
  "executeMutation": [Function],
  "executeQuery": [Function],
  "executeSubscription": [Function],
  "fetchOptions": Object {
    "integrity": "",
    "referrerPolicy": "",
  },
  "operations$": [Function],
  "reexecuteOperation": [Function],
  "results$": [Function],
  "suspense": false,
  "url": "https://localhost:3000",
}
`;
